--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "next-auth": "^4.24.11",
     "nodemailer": "^7.0.5",
     "openai": "^5.10.2",
-    "pdf-lib": "^1.17.1",
+  "pdf-lib": "^1.17.1",
+  "postmark": "^4.0.4",
     "postcss-import": "^16.1.1",
     "react": "18.3.1",
     "react-chartjs-2": "^5.3.0",
